objects/Materials_Received__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Site_Report__c</fullName>
        <label>Daily Site Report</label>
        <referenceTo>Daily_Site_Report__c</referenceTo>
        <relationshipLabel>Materials Received</relationshipLabel>
        <relationshipName>Materials_Received</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_in_Full__c</fullName>
        <label>Delivery in Full?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Item__c</fullName>
        <description>List of Line Item name (actually Cost Codes) to choose from based on criteria from Kevin Corbett for the Daily Site Report</description>
        <label>Line Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Module Material</fullName>
                </value>
                <value>
                    <fullName>Racking Material</fullName>
                </value>
                <value>
                    <fullName>Foundations Material</fullName>
                </value>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>DAS Material</fullName>
                </value>
                <value>
                    <fullName>AC Electrical- Material- Borrego</fullName>
                </value>
                <value>
                    <fullName>​MV Electrical - Material - Borrego</fullName>
                </value>
                <value>
                    <fullName>DC Electrical- Material- Borrego</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>Allows user to manually enter the PO number, i.e. &quot;PO-22146&quot;</description>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Slip_BOL__c</fullName>
        <label>Issues and Comments</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Allows user to manually enter the related Product from the PO, PO Line</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_Individual__c</fullName>
        <label>Receiving Individual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Materials Received</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Materials Received Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materials Received</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>